-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.1
-
None
-
d6a7287fb40121951d3d93296eed011c2b598832
- check checkbox "enable text wrapping"
- yank (yy) a long wrapped line (display on 2 lines)
- paste it (p)
result => it insert an empty line
For Gerrit Dashboard: QTCREATORBUG-13102 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
98197,4 | FakeVim: Yank wrapped lines with 'Y' an 'yy' | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
98761,2 | FakeVim: Fix line selection for wrapped lines | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |