FakeVim: Yank wrapped lines with 'Y' an 'yy'

Task-number: QTCREATORBUG-13102
Change-Id: I632dd5113ca8021f67364b92f8f0840e0f15772c
Reviewed-by: hjk <hjk121@nokiamail.com>